# icopy-x

./: .gitignore  AUTHORS.md  LICENSE.md  README.md  conftest.py  pyproject.toml
data/: conf.ini
docs/: 2026-04-10-HOWTO-REAL-DEVICE-FLOW-AUDITING.md  2026-04-12 - FLOW-CURRENT Results (current target).md  2026-04-12 - FLOW-CURRENT Results.md  2026-04-14 - Compat Layer Handover.md  2026-04-14 - UI Bugs Handover.md  2026-04-16 - Compatability Flip.md  ARCHITECTURE.md  BUILDING.md  DRM-Install-Analysis.md  DRM-Issue.md  DRM-KB.md  HANDOVER_AUTOCOPY_FLOW.md  HANDOVER_LIVE_TESTING.md  HANDOVER_MIDDLEWARE_PHASE4.md  HANDOVER_PM3_LAUNCH_FIX.md  HANDOVER_SYSTEM_FLOWS.md  HANDOVER_UI_AUDIT_20260410.md  HANDOVER_WRITE_FLOW_AGENT3.md  HARDWARE_TEST_PROCEDURE.md  HOW-TO-Real-Device - OSS Audit.md  HOWTO-BUILD-ICEMAN-FIRMWARE.md  HOWTO-JAILBREAK.md  HOW_TO_BUILD_A_NO_FLASH-OG-MIDDLEWARE_IPK.md  HOW_TO_BUILD_FLOWS.md  HOW_TO_INTEGRATE_A_FLOW.md  HOW_TO_RUN_LIVE_TRACES.md  MIDDLEWARE_TRANSLITERATION_PLAN.md  ORIGINAL_ANALYSIS.md  OSS-MIDDLEWARE-GOTCHAS.md  PLAN_RFID_WRITE_FIX.md  PLUGINS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SPEC.md  PROGRESS.md  RE_CHRONICLE.md  RUNNING_TESTS.md  TESTING.md  TOOLS.md  UI-Migration.md  UI_JSON_SCHEMA.md  (+4 more)
src/: app.py
tests/: run_full_suite_remote.sh  test_all_flows.sh  test_pm3_compat_parity.py
tools/: TOOLS.md  build_ipk.py  build_noflash_ipk.py  compare_ui_states.py  diag_scan.py  fix_lf_write_fixtures.py  generate_autocopy_fixtures.py  generate_scenario_fixtures.py  generate_write_dump.py  generate_write_fixtures.py  launcher_current.py  (+15 more)
(+1581 files in other folders)
